--- a/src/components/Jobs/index.css
+++ b/src/components/Jobs/index.css
@@ -22,7 +22,16 @@
   .section-1 {
     display: flex;
     flex-direction: column;
-    width: 30vw;
+    margin-right: 10px;
+    width: 25%;
+    position: fixed;
+    top:0;
+    left: 0;
+    bottom: 0;
+    overflow-y: auto;
+    padding-top: 60px;
+    padding: 5px;
+    margin-top: 60px;
   }
 }
 .section-2 {
@@ -32,12 +41,11 @@
   padding: 20px;
 }
 @media (min-width: 768px) {
-  .section-1 {
+  .section-2 {
     display: flex;
     flex-direction: column;
-    width: 30%;
-    margin-right: 10px;
-    padding: 10px;
+    width: 50%;
+    padding: 15px;
   }
 }
 .sm-searchBar {
